[package]
name = "actrice"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.87"
flume = "0.11.1"
tokio = { version = "1", features = ["rt", "macros", "sync", "parking_lot"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
actix = "0.13.5"

[[bench]]
name = "bench"
harness = false
